--- a/rhymecity/build.gradle
+++ b/rhymecity/build.gradle
@@ -62,7 +62,8 @@ dependencies {
 
     compile 'com.google.zxing:core:3.2.0'
 
-   compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
+  // compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
+   //.//compile "com.raizlabs.android:DBFlow:2.2.1"
    // compile 'com.raizlabs.android:DBFlow:2.2.1'
 }
 
