--- a/rhymecity/src/main/AndroidManifest.xml
+++ b/rhymecity/src/main/AndroidManifest.xml
@@ -63,11 +63,19 @@
         <activity
             android:name="com.fly.bmark2.ui.activity.Homepage.HomeActivity"
             android:label="@string/app_name">
+
+        </activity>
+
+
+        <activity
+            android:name=".ui.activity.GridView.MainGridView"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
 
         <activity android:name="com.fly.bmark2.ui.activity.ContactusLocationView"/>
         <activity android:name="com.fly.bmark2.augmented3.MainActivity"/>
@@ -76,12 +84,12 @@
 
 
 
-        <activity android:name="com.fly.bmark2.ui.activity.Register.RegisterActivity"/>
+       <!-- <activity android:name="com.fly.bmark2.ui.activity.Register.RegisterActivity"/>
         <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.SearchFlightActivity"/>
         <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.FlightDetailActivity"/>
         <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.PersonalDetailActivity"/>
         <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.SeatSelectionActivity"/>
-        <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.PaymentFlightActivity"/>
+        <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.PaymentFlightActivity"/>-->
 
         <meta-data
             android:name="com.google.android.gms.version"
