--- a/rhymecity/build.gradle
+++ b/rhymecity/build.gradle
@@ -29,7 +29,6 @@ android {
 
 dependencies {
     // Google stuff
-
     // Square-y stuff
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
@@ -40,31 +39,34 @@ dependencies {
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
-
     compile files('libs/android-query-full.0.26.8.jar')
     compile 'com.koushikdutta.ion:ion:2.1.3'
     compile 'com.google.code.gson:gson:2.3.1'
     // UI stuffs
     compile 'com.nispok:snackbar:2.7.5'
-   // compile 'com.android.support:support-v4:22.0.0'
-
+    // compile 'com.android.support:support-v4:22.0.0'
     // Unit tests
     testCompile 'com.android.support.test:testing-support-lib:0.1'
     testCompile 'org.mockito:mockito-core:1.9.0'
-
     //ListView Animation
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
+   // compile(name: 'wikitudesdk', ext: 'aar')
+   // compile(name: 'lib-release', ext: 'aar')
 
-    compile (name: 'wikitudesdk', ext:'aar')
-    compile (name: 'lib-release', ext:'aar')
 
-    compile 'com.google.zxing:core:3.2.0'
+    compile files('libs/nineoldandroids-2.4.0.jar')
+    compile(name: 'wikitudesdk', ext: 'aar')
+    compile(name: 'lib-release', ext: 'aar')
 
-  // compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
-   //.//compile "com.raizlabs.android:DBFlow:2.2.1"
-   // compile 'com.raizlabs.android:DBFlow:2.2.1'
+    //compile 'com.nineoldandroids:library:2.4.0'
+    //compile 'com.google.zxing:core:3.2.0'
+    // compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
+    //.//compile "com.raizlabs.android:DBFlow:2.2.1"
+    // compile 'com.raizlabs.android:DBFlow:2.2.1'
+    //compile 'com.nineoldandroids:library:2.4.0'
+    //compile files('libs/nineoldandroids-2.4.0.jar')
 }
 
 repositories {
