--- a/rhymecity/src/main/AndroidManifest.xml
+++ b/rhymecity/src/main/AndroidManifest.xml
@@ -56,7 +56,18 @@
 <!--  android:name="com.fly.firefly.ui.activity.MainActivity"-  tools:replace="android:name"-->
 
         <activity
-            android:name="com.fly.bmark2.ui.activity.Homepage.HomeActivity"
+            android:name=".ui.activity.LandingPage.LandingPage"
+            android:label="@string/app_name">
+
+        </activity>
+
+        <activity
+            android:name="com.fly.bmark2.ui.activity.SelectPage.selectionPage"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
+            android:name="com.fly.bmark2.ui.activity.SplashScreen.SplashScreenActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -64,19 +75,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.fly.bmark2.ui.activity.ContactusLocationView"/>
+        <activity android:name=".ui.activity.LocationPage.ContactusLocationView"/>
         <activity android:name="com.fly.bmark2.augmented3.MainActivity"/>
         <activity android:name="com.fly.bmark2.augmented3.MainSamplesListActivity"/>
         <activity android:name="com.fly.bmark2.augmented3.SampleCamActivity"/>
-
-
-
-        <activity android:name="com.fly.bmark2.ui.activity.Register.RegisterActivity"/>
-        <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.SearchFlightActivity"/>
-        <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.FlightDetailActivity"/>
-        <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.PersonalDetailActivity"/>
-        <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.SeatSelectionActivity"/>
-        <activity android:name="com.fly.bmark2.ui.activity.BookingFlight.PaymentFlightActivity"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -98,9 +100,6 @@
         <service
             android:name="com.trnql.smart.weather.SmartWeatherIntentService"
             android:label="TRNQL_SDK - SmartWeather Intent Service" />
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
 
     </application>
 
