--- a/rhymecity/src/main/AndroidManifest.xml
+++ b/rhymecity/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
 
     <permission
         android:name="package.permission.MAPS_RECEIVE"
@@ -45,13 +47,15 @@
     <!-- compass -->
     <uses-feature
         android:name="android.hardware.sensor.compass"/>
+   <!-- android:name="com.trnql.zen.core.AppData" -->
 
     <application
-        android:name="com.trnql.zen.core.AppData"
+        android:name="com.fly.bmark2.AppApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme1"
         android:allowBackup="true"
+        tools:replace="android:name"
        >
 <!--  android:name="com.fly.firefly.ui.activity.MainActivity"-  tools:replace="android:name"-->
 
@@ -61,10 +65,10 @@
 
         </activity>
 
-        <activity
+       <!-- <activity
             android:name="com.fly.bmark2.ui.activity.SelectPage.selectionPage"
             android:label="@string/app_name">
-        </activity>
+        </activity> -->
 
         <activity
             android:name="com.fly.bmark2.ui.activity.SplashScreen.SplashScreenActivity"
